--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: MultiRTP_MX
 version: 1.0.4
 author: MIROSHKA
-main: MIROSHKA.Main
+main: MIROSHKA.MultiRTP
 api: [1.0.0]
 description: Plugin description here.
 
