--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+*.lst
+*.properties
+*.jar
+*.class
+target/classes/config.yml
+target/classes/plugin.yml
+.idea/jarRepositories.xml
+.idea/jarRepositories.xml
